Conclusão tela Login

--- a/Login/index.htm
+++ b/Login/index.htm
@@ -16,21 +16,34 @@
     <header></header>
 
     <main>
-        <p>SenaiGPT</p>
 
-        <!-- Utilizado quando tem arquivo CSS, classe e id -->
-        <!-- <h1 id="meutitulo" class="titulo">Login</h1> -->
+        <div class="robo-image">
 
-        <!-- Utilizado apenas no html -->
-        <!-- <h1 style="font-size: 76px;">Login</h1>  -->
+            <img class="logo" src="../assets/imgs/Sidebar.png" alt="Robo">
 
-        <!-- Utilizando a formação no CSS pela tag -->
-        <h1>Login</h1>
+        </div>
 
-        <input type="email" placeholder="Insira o e-mail">
-        <input type="password" placeholder="Insira a senha">
 
-        <button>Entrar</button>
+        <div class="login-container">
+
+            <img class="logo" src="../assets/imgs/Chat.png" alt="Logo do SenaiGPT">
+
+
+            <!-- Utilizado quando tem arquivo CSS, classe e id -->
+            <!-- <h1 id="meutitulo" class="titulo">Login</h1> -->
+
+            <!-- Utilizado apenas no html -->
+            <!-- <h1 style="font-size: 76px;">Login</h1>  -->
+
+            <!-- Utilizando a formação no CSS pela tag -->
+            <h1>Login</h1>
+
+            <input class="inpt" type="email" placeholder="Insira o e-mail">
+            <input class="inpt" type="password" placeholder="Insira a senha">
+
+            <button class="btn">Entrar</button>
+
+        </div>
 
     </main>
 
