Finalização tela de login

--- a/Login/index.htm
+++ b/Login/index.htm
@@ -15,11 +15,11 @@
 
     <header></header>
 
-    <main>
+    <main class="page-container">
 
         <div class="robo-image">
 
-            <img class="logo" src="../assets/imgs/Sidebar.png" alt="Robo">
+            <!-- <img class="robo" src="../assets/imgs/Sidebar.png" alt="Robo"> -->
 
         </div>
 
