Correção nome arquivos

--- a/Login/index.html
+++ b/Login/index.html
@@ -7,6 +7,7 @@
     <title>Login - SenaiGPT</title> <!--Tag para definir o nome da aba do browser-->
 
     <!-- Linkar o arquivo do CSS - Comando CTRL + K + C-->
+     <link rel="stylesheet" href="../assets/styles/global.css">
     <link rel="stylesheet" href="login.css">
 
 </head>
