--- a/Chat/index.html
+++ b/Chat/index.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 
     <link rel="stylesheet" href="../assets/styles/global.css">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="chat.css">
 </head>
 
 <body>
@@ -41,12 +41,20 @@
 
         </header>
 
+        <div class="linha"></div>
+        
         <main>
 
             <div class="principal">
 
                 <img class="imagem" src="../assets/imgs/ChatGPT.png" alt="Logo SenaiGPT">
 
+
+            </div>
+
+            <div class="pesquisa">
+
+                <input class="input" type="text" placeholder="Type message">
 
             </div>
 
