Continuação tela chat

--- a/chat2/index.html
+++ b/chat2/index.html
@@ -50,6 +50,29 @@
                 <img class="imagem" src="../assets/imgs/ChatGPT.png" alt="Logo SenaiGPT">
 
 
+                <div class="tabela">
+
+                    <h1>Examples</h1>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+                    <p>Explain</p>
+    
+                
+
+                </div>
+
             </div>
 
             <div class="pesquisa">
