--- a/chat/index.html
+++ b/chat/index.html
@@ -118,7 +118,12 @@
 
                 <div class="pesquisa">
 
+                    <img src="../assets/imgs/microfone.svg" alt="Imagem microfone">
+                    <img src="../assets/imgs/image.svg" alt="Imagem foto">
+
                     <input class="input" type="text" placeholder="Type message">
+
+                    <img src="../assets/imgs/seta.svg" alt="Imagem foto">
 
                 </div>
 
